# firedrake-rtree

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
firedrake_rtree/: __init__.py
interval-tree/: Cargo.toml
interval-tree/src/: lib.rs  tests.rs
rstar-capi/: Cargo.toml  build.rs  cbindgen.toml
rstar-capi/include/: rstar-capi.h
rstar-capi/src/: error.rs  intervaltree.rs  lib.rs  node.rs  rtree.rs
rstar-capi/tests/: c_api_tests.rs  test.c
rstar/src/: params.rs
rtree-capi/: Cargo.toml  build.rs
rtree-capi/include/: rtree-capi.h
rtree-capi/python/firedrake_rtree/: __init__.py
rtree-capi/python/firedrake_rtree/include/: rtree-capi.h
rtree-capi/src/: error.rs  lib.rs  node.rs  rtree.rs
rtree-capi/tests/: c_api_tests.rs  test.c
