[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "firedrake-rtree"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
version = "2026.0"

[tool.maturin]
manifest-path = "rtree-capi/Cargo.toml"
features = ["python"]
python-source = "rtree-capi/python"
module-name = "firedrake_rtree.rtree_capi"