[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "firedrake-rtree"
description = "C api for spatial indexing"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license = "MIT"
readme = "README.md"
maintainers = [
    { name = "Leo Collins", email = "l.collins24@imperial.ac.uk"},
]
dynamic = ["version"]  # gets version from rtree-capi/Cargo.toml

[project.urls]
Repository = "https://github.com/firedrakeproject/firedrake-rtree"

[tool.maturin]
manifest-path = "rtree-capi/Cargo.toml"
features = ["python"]
python-source = "."
module-name = "firedrake_rtree"
include = [
    { path = "LICENSE", format = ["sdist", "wheel"] },
    { path = "README.md", format = ["sdist", "wheel"] },
    { path = "firedrake_rtree/include/*", format = ["sdist", "wheel"] },
]