[package]
name = "rtree-capi"
version = "2026.0.5"
edition = "2021"

[features]
python = ["pyo3"]

[dependencies]
rstar = "0.12.2"
interval-tree = { path = "../interval-tree" }
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }

[build-dependencies]
cbindgen = "0.29"

[lib]
name = "rtree_capi"
crate-type = ["cdylib"]
